--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,13 @@ jobs:
           --health-timeout=5s
           --health-retries=5
 
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 11 for x64
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
-          architecture: x64
 
       # Install pip and dependencies
       - name: Install dependencies
