Changed apt to apt-get

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       # Install pip and dependencies
       - name: Install dependencies
         run: |
-          sudo apt install chromium-chromedriver
+          sudo apt-get install chromium-chromedriver
 
       - name: Set Auth0 environment variables
         run: |
@@ -66,5 +66,4 @@ jobs:
           mvn spring-boot:run &
       - name: Test with maven
         run: |
-          sleep 5
           mvn test
