Using pre-defined chrome install action instead

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,12 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      # Install pip and dependencies
-      - name: Install dependencies
-        run: |
-          sudo apt-get install chromium-chromedriver
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          install-chromedriver: true
+      - name: Test Chrome version
+        run: chrome --version
 
       - name: Set Auth0 environment variables
         run: |
