--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,9 @@ jobs:
         with:
           install-chromedriver: true
       - name: Test Chrome version
-        run: chrome --version 
-             which chromedriver
+        run: |
+          chrome --version 
+          which chromedriver
 
 
       - name: Set Auth0 environment variables
