fixes paths to chromedriver

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,10 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <scope>test</scope>
+            <version>4.19.1</version> <!-- or the latest version -->
         </dependency>
+
+
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
