--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
         uses: browser-actions/setup-chrome@v1
         with:
           install-chromedriver: true
-          chrome-version: '131'  # Match this with your installed Chrome version
+          chrome-version: '109'  # Match this with your installed Chrome version
+          "chromedriver": "^109.0.0"
       - name: Test Chrome version
         run: |
           chrome --version 
