--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Install Chrome 118
+      - name: Install Chrome
         uses: browser-actions/setup-chrome@v1
         with:
           install-chromedriver: true
