fixes chromedriver versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,14 @@ jobs:
       - name: Install Chrome
         uses: browser-actions/setup-chrome@v1
         with:
+          chrome : '118'
           install-chromedriver: true
           chrome-version: '118'  # Match this with your installed Chrome version
 
       # 2. Install Google Chrome 118
       - name: Install Google Chrome 118
         run: |
+          
           # Download and install Google Chrome 118
           curl -sSL https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -o google-chrome.deb
           sudo dpkg -i google-chrome.deb || sudo apt-get install -f
