--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,40 +38,9 @@ jobs:
       - name: Install Chrome
         uses: browser-actions/setup-chrome@v1
         with:
-          chrome : '118'
           install-chromedriver: true
-          chrome-version: '118'  # Match this with your installed Chrome version
-
-      # 2. Install Google Chrome 118
-      - name: Install Google Chrome 118
-        run: |
-          
-          # Download and install Google Chrome 118
-          curl -sSL https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -o google-chrome.deb
-          sudo dpkg -i google-chrome.deb || sudo apt-get install -f
-          
-          # Verify Chrome version
-          google-chrome --version
-
-
-
       - name: Test Chrome version
-        run: |
-          chrome --version 
-          which chromedriver
-
-      - name: Move chromedriver to /usr/local/bin
-        run: |
-          # Capture the path of chromedriver
-          chromedriver_path=$(which chromedriver)
-
-          # Move chromedriver to /usr/local/bin
-          sudo mv "$chromedriver_path" "/usr/local/bin/chromedriver"
-
-          # Verify the move
-          echo "chromedriver moved to /usr/local/bin"
-
-
+        run: chrome --version
 
       - name: Set Auth0 environment variables
         run: |
