added playwright to workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
         run: |
           chrome --version
           install playwright
+          mvn -B install -D skipTests --no-transfer-progres
+          mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps"
 
       - name: Set Auth0 environment variables
         run: |
