added playwright to workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Test Chrome version
         run: |
           chrome --version
+
+      - name: Install playwright
+        run: |
           mvn -B install -D skipTests -ntp
           mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps"
 
@@ -68,7 +71,8 @@ jobs:
         run: |
           PGPASSWORD=$POSTGRES_PASSWORD createdb -h localhost -p 5432 -U postgres acebook_springboot_development
           PGPASSWORD=$POSTGRES_PASSWORD createdb -h localhost -p 5432 -U postgres acebook_springboot_test
-          mvn spring-boot:run &
+
       - name: Test with maven
         run: |
+          mvn spring-boot:run &
           mvn test
