--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,5 @@ jobs:
         run: |
           mvn exec:java -e -D exec.mainClass=com.microsoft.playwright.CLI -D exec.args="install --with-deps"
           mvn spring-boot:run &
+          sleep 10
           mvn test
