--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,10 @@
             <artifactId>playwright</artifactId>
             <version>1.49.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.github.javafaker</groupId>
