--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.apache.http=DEBUG
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
