--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:${POSTGRES_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/acebook_springboot_test
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 flyway.baseline-on-migrate=true
